--- a/.github/workflows/app-bootanimation.yml
+++ b/.github/workflows/app-bootanimation.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: 合成 mendisk
       working-directory: memdisk
-      run: sudo bash ./${{ matrix.type }}.sh
+      run: sudo bash ./${{ matrix.app-name }}/打包.sh
 
     - name: 克隆 grub2
       run: |
