--- a/memdisk/bootanimation/grub/grub.cfg
+++ b/memdisk/bootanimation/grub/grub.cfg
@@ -28,4 +28,5 @@ set timeout=2
 set theme=${prefix}/主题/开机动画/part0.txt
 export theme
 menuentry "part1" {configfile ${prefix}/开机动画.cfg}
+hiddenentry "exit" --hotkey "esc" {exit}
 #==============================================================================
