--- a/memdisk/bootanimation/grub/开机动画.cfg
+++ b/memdisk/bootanimation/grub/开机动画.cfg
@@ -17,7 +17,6 @@ play ${record}
 #####----{主页}----
 #------------------------------------------------------------------------------
 set timeout=3
-menuentry "home" {
-	chainloader ${cmdpath}/launcher.efi
-}
+menuentry "home" {chainloader ${cmdpath}/launcher.efi}
+hiddenentry "exit" --hotkey "esc" {exit}
 #==============================================================================
