--- a/memdisk/bootanimation/grub/主题/显示.cfg
+++ b/memdisk/bootanimation/grub/主题/显示.cfg
@@ -14,6 +14,6 @@ terminal_output gfxterm
 #==============================================================================
 #####----{加载字体}----
 #------------------------------------------------------------------------------
-loadfont Terminus_Regular_24
+loadfont Terminus_(TTF)_Regular_24
 loadfont Microsoft_YaHei_Regular_24
 #==============================================================================
