--- a/memdisk/bootanimation/grub/主题/显示.cfg
+++ b/memdisk/bootanimation/grub/主题/显示.cfg
@@ -14,7 +14,7 @@ terminal_output gfxterm
 #==============================================================================
 #####----{加载字体}----
 #------------------------------------------------------------------------------
-set font_dir=${cmdpath}/../fonts
-loadfont ${font_dir}/Terminus_(TTF)_Regular_24
-loadfont ${font_dir}/Microsoft_YaHei_Regular_24
+set font_dir=${boot_dir}/fonts
+loadfont ${font_dir}/Terminus_(TTF)_Regular_24.pf2
+loadfont ${font_dir}/Microsoft_YaHei_Regular_24.pf2
 #==============================================================================
