--- a/memdisk/bootanimation/grub/开机动画.cfg
+++ b/memdisk/bootanimation/grub/开机动画.cfg
@@ -8,8 +8,8 @@
 #------------------------------------------------------------------------------
 set theme=${prefix}/主题/开机动画/part1.txt
 export theme
-load_env --file=${cmdpath}/../vars/recordenv
-read_file ${cmdpath}/../media/records/${record_bootanimation} record
+load_env --file=${boot_dir}/vars/recordenv
+read_file ${boot_dir}/media/records/${record_bootanimation} record
 play ${record}
 #==============================================================================
 
