--- a/memdisk/bootanimation/grub/grub.cfg
+++ b/memdisk/bootanimation/grub/grub.cfg
@@ -6,7 +6,8 @@
 #==============================================================================
 #####----{加载环境变量}----
 #------------------------------------------------------------------------------
-load_env --file=${cmdpath}/../grubenv
+set boot_dir=${cmdpath}/..
+load_env --file=${boot_dir}/grubenv
 #==============================================================================
 
 #==============================================================================
