--- a/memdisk/bootanimation/grub/开机动画.cfg
+++ b/memdisk/bootanimation/grub/开机动画.cfg
@@ -8,7 +8,7 @@
 #------------------------------------------------------------------------------
 set theme=${prefix}/主题/开机动画/part1.txt
 export theme
-load_env --file=${boot_dir}/vars/recordenv
+load_env --file=${data_dir}/音效
 read_file ${boot_dir}/media/records/${record_bootanimation} record
 play ${record}
 #==============================================================================
