--- a/memdisk/bootanimation/grub/grub.cfg
+++ b/memdisk/bootanimation/grub/grub.cfg
@@ -7,6 +7,7 @@
 #####----{加载环境变量}----
 #------------------------------------------------------------------------------
 set boot_dir=${cmdpath}/..
+export data_dir=${boot_dir}/data
 load_env --file=${boot_dir}/grubenv
 #==============================================================================
 
